<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    android:background="@drawable/shape_roundcorner">

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/dialogValue_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/dialog_value_lux_title"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>

    <EditText
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/dialog_value_lux_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:hint="@string/dialog_value_lux_hint"
        android:textColorHint="@color/colorGray"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/dialog_value_lux_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:text="@string/dialog_cancel"/>

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:layout_gravity="center"
            android:textSize="18sp"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/dialog_value_lux_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/dialog_confirm"/>

    </LinearLayout>

</LinearLayout>